add linkswitch code

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -25,3 +25,7 @@ Or you can delete these file if you don't need it.
 
   gtag('config', 'G-XL5G30FP5R');
 </script>
+<!-- link switch-->
+<script type="text/javascript" language="javascript">
+  var vc_pid = "887679350";
+</script><script type="text/javascript" src="//aml.valuecommerce.com/vcdal.js" async></script>
